# leantime-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: build-and-deploy.sh
src/leantime_mcp/: __init__.py  client.py  server.py  tools.py  version.py
