# SPDX-FileCopyrightText: 2025 Daniel Eder
#
# SPDX-License-Identifier: MIT

[project]
name = "leantime-mcp"
version = "1.0.2"
description = "Model Context Protocol server for Leantime project management API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.16,<2",
    "fastmcp>=2.12,<3",
    "httpx>=0.28,<0.29",
    "pydantic>=2.12,<3",
    "python-dotenv>=1.1,<2",
]
authors = [
    { name = "Daniel Eder" }
]

[project.scripts]
leantime-mcp = "leantime_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
